welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:11: error: type mismatch;
 found   : Unit
 required: Boolean
	}else if(weekday == true && vacation == true){
              ^